@@ -1,3 +1,6 @@
+* [Bug 1381] Version .deps generated include file dependencies to allow
+  known dependecy-breaking changes to force .deps to be cleaned, 
+  triggered by changing the contents of deps-ver and/or sntp/deps-ver.
 (4.2.5p244-RC) 2009/11/12 Released by Harlan Stenn <stenn@ntp.org>
 * keygen.html updates from Dave Mills.
 * [Bug 1003] ntpdc unconfig command doesn't prompt for keyid.
